syntax = "proto3";
package teaclave_authorization_service_proto;

message UserLoginRequest {
  string id = 1;
  string password = 2;
}

message UserLoginResponse {
  string token = 1;
}

service TeaclaveAuthorization {
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse);
}
